2002-01-23  Sam Steingold  <sds@gnu.org>

	* array.d (ssstring_extend_low): new function
	(ssstring_push_extend, ssstring_extend): use it

2002-01-22  Sam Steingold  <sds@gnu.org>

	* predtype.d (with_gc_statistics) [DEBUG_SPVW]: print a message
	when a GC is being done

2002-01-22  Sam Steingold  <sds@gnu.org>

	ANSI CL 11.1.2.1.2 #19 forbids methods with locked functions and
	specializers - check that too
	* package.d (CHECK-PACKAGE-LOCK): package may be a list of
	packages
	* init.lisp (check-redefinition): symbol maybe a method spec - a
	list of function name and specializers
	* clos.lisp (analyze-method-description): call CHECK-REDEFINITION

2002-01-21  Sam Steingold  <sds@gnu.org>

	SOCKET-STATUS now works on all handle streams, whose handles are
	acceptable to the underlying OS's select system call
	* stream.d (stream_handles): work on many streams and return 2
	handles (renamed from socket_handle)
	(handle_set, handle_isset, SOCKET-STATUS): modified accordingly
	(ChannelStream_ihandle, ChannelStream_ohandle): new macros

2002-01-18  Sam Steingold  <sds@gnu.org>

	* stream.d (stream_char_p): removed (good only for "basic streams")
	(handle_isset, stream_reset_eltype): look at strm_eltype directly

2002-01-18  Sam Steingold  <sds@gnu.org>

	support #! UNIX scripts on WIN32 too
	* io.d, constsym.d, spvw.d, subr.d (UNIX-EXECUTABLE-READER):
	define on WIN32_NATIVE too

2002-01-18  Sam Steingold  <sds@gnu.org>

	* stream.d (SOCKET-STATUS): fix a GC safety bug
	(handle_isset): mark as GC-unsafe
	Reported by Todd Sabin <tas@webspan.net>

2002-01-18  Sam Steingold  <sds@gnu.org>

	* stream.d (FILE-POSITION): work on any stream, not just an open
	file stream, as per ANSI CL

2002-01-17  Sam Steingold  <sds@gnu.org>

	* stream.d (read-byte): respect the unread chars
	(stream_reset_eltype): new function - rectify the
	ignore_next_LF lossage when changing STREAM-ELEMENT-TYPE
	(BUILT-IN-STREAM-SET-ELEMENT-TYPE, SET-STREAM-EXTERNAL-FORMAT): use it